  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

The font chooser dialog of the Session Properties dialog (see bottom of tab SQL)
  used to show up centered over the main application frame instead of over its parent dialog.

The maximum length of strings stored in Paste history (ctrl+shift+v or ctrl+shift+insert) is now 30000.

Fixed "No resource found for key SQLPanelAPI.nofileToRelaod" error message.

SQL Editor / Parser: 
 - Brackets in literals or comments
 - "'"  in comments ("--" or "/* ... */")
 - comments in literals
 could break SQuirreL's SQL parser.

SQL editor: Errors sometimes didn't get highlighted, especially in additional SQL tabs and windows.

SQL result: Count of selected rows and columns were updated when row selection changed only. Now it's updated on column selection change, too.

#1394 Line breaks are lost on copy/paste when copy as Rich Text was activated, see menu File --> New Session Properties --> tab Syntax.
   With this came another upgrade of RSyntax version 3.0.1. The bug was actually in RSyntax, see https://github.com/bobbylight/RText/issues/39.

Plain zip Windows start script squirrel-sql.bat: javaw.exe could not be found in certain cases.
  In the developers mailing list Sigiswald Madou pointed to differences between the plain zip and the installer scripts that caused the problem.

#1343 SQuirreL refuses to start on macOS  --> Johnny Hujol's fix to the  macOS launch script's.
     Thanks to Johnny Hujol for the fix.

Difference chart plotted differences between second next neighbours instead of next neighbours. (See SQL result --> tab Overview --> button Charts --> tab Differences)
